--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <span class="nav-button"><a href="#">Contact</a></span>
         </div>
       </nav>
+      <div class="flex container">
+        <div class="banner">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>
     </header>
 
   </body>
