--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <span>Tortoiseshell Optics</span>
         </div>
         <div class="nav-items">
-          <span class="nav-button"><a href="#">Services</a></span>
-          <span class="nav-button"><a href="#">Products</a></span>
-          <span class="nav-button"><a href="#">Contact</a></span>
+          <a href="#">Services</a>
+          <a href="#">Products</a>
+          <a href="#">Contact</a>
         </div>
       </nav>
       <div class="flex container">
@@ -29,5 +29,44 @@
       </div>
     </header>
 
+    <!-- Main Section -->
+
+    <section class="supporting">
+      <div class="service">
+        <img class="paper" src="./resources/images/paper-icon.png" alt="Document Logo">
+        <span>Comprehensive Exams</span>
+      </div>
+      <div class="service">
+        <img src="./resources/images/ruler-icon.png" alt="Fittings Logo">
+        <span>Custom Fittings</span>
+      </div>
+      <div class="service">
+        <img src="./resources/images/truck-icon.png" alt="Delivery Logo">
+        <span>Fast Delivery</span>
+      </div>
+    </section>
+    <section class="supporting container">
+      <div class="info">
+        <div class="title">
+          <h4>PHILOSOPHY</h4>
+        </div>
+        <span>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</span>
+      </div>
+      <div class="info">
+        <div class="title">
+          <h4>APPOINTMENTS</h4>
+        </div>
+        <span>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</span>
+      </div>
+    </section>
+
+    <!-- Footer -->
+
+    <footer class="container">
+      <div>
+        <img src="./resources/images/footer-logo.png" alt="Footer Glasses Logo">
+        <span>Copyright Tortoiseshell Optics</span>
+      </div>
+    </footer>
   </body>
 </html>
