--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       <nav class="container">
         <div class="logo">
           <img src="./resources/images/header-logo.png" alt="White Glasses Logo">
-          <span>Tortoiseshell Optics</span>
+          <span class="desktop-tablet">Tortoiseshell Optics</span>
         </div>
         <div class="nav-items">
-          <a href="#">Services</a>
-          <a href="#">Products</a>
-          <a href="#">Contact</a>
+          <a href="#" class="mobile">Menu</a>
+          <a href="#" class="desktop-tablet">Services</a>
+          <a href="#" class="desktop-tablet">Products</a>
+          <a href="#" class="desktop-tablet">Contact</a>
         </div>
       </nav>
       <div class="flex container">
@@ -46,17 +47,17 @@
       </div>
     </section>
     <section class="supporting container">
-      <div class="info">
+      <div class="info philosophy">
         <div class="title">
           <h4>PHILOSOPHY</h4>
         </div>
-        <span>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</span>
+        <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
       </div>
       <div class="info">
         <div class="title">
           <h4>APPOINTMENTS</h4>
         </div>
-        <span>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</span>
+        <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </section>
 
@@ -65,7 +66,7 @@
     <footer class="container">
       <div>
         <img src="./resources/images/footer-logo.png" alt="Footer Glasses Logo">
-        <span>Copyright Tortoiseshell Optics</span>
+        <span class="desktop-tablet">Copyright Tortoiseshell Optics</span>
       </div>
     </footer>
   </body>
